--- a/PraleistosReiksmes_Isskirtys.ipynb
+++ b/PraleistosReiksmes_Isskirtys.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-09-20T15:02:31.305221Z",
-     "start_time": "2025-09-20T15:02:31.247039Z"
+     "end_time": "2025-09-21T09:25:21.353349Z",
+     "start_time": "2025-09-21T09:25:21.294283Z"
     }
    },
    "source": [
@@ -19,13 +19,13 @@
     "raw_data = pd.read_csv(\"EKG_pupsniu_analize.csv\", sep =\";\")"
    ],
    "outputs": [],
-   "execution_count": 81
+   "execution_count": 14
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-20T15:02:32.231779Z",
-     "start_time": "2025-09-20T15:02:32.220099Z"
+     "end_time": "2025-09-21T09:25:22.235816Z",
+     "start_time": "2025-09-21T09:25:22.224779Z"
     }
    },
    "cell_type": "code",
@@ -36,40 +36,40 @@
     "    raw_data[raw_data[\"label\"].notna()]\n",
     "    .groupby(\"label\", group_keys=False)\n",
     "    .apply(lambda x: x.sample(n=500, replace=False, random_state=seed))\n",
-    ")\n",
+    ") # atsitiktinai isrenkame po 500 irasu kiekvienai klasei\n",
     "\n"
    ],
    "id": "53ed2f4b75b32c75",
    "outputs": [],
-   "execution_count": 82
+   "execution_count": 15
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-20T15:02:33.385847Z",
-     "start_time": "2025-09-20T15:02:33.381129Z"
+     "end_time": "2025-09-21T09:25:23.890713Z",
+     "start_time": "2025-09-21T09:25:23.885395Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "cols_to_keep  = [\"signal_std\", \"wl_side\", \"R_val\", \"RR_r_0/RR_r_1\", \"P_val\", \"Q_val\", \"label\"]\n",
+    "cols_to_keep  = [\"signal_std\", \"wl_side\", \"R_val\", \"RR_r_0/RR_r_1\", \"P_val\", \"Q_val\", \"label\"] #tiriamieji pozymiai\n",
     "\n",
-    "data_6 = data_seed[cols_to_keep]"
+    "data_6 = data_seed[cols_to_keep] # paliekame tik reikalingus pozymius"
    ],
    "id": "c04c72a888ce50e0",
    "outputs": [],
-   "execution_count": 83
+   "execution_count": 16
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-20T15:02:52.541756Z",
-     "start_time": "2025-09-20T15:02:52.535954Z"
+     "end_time": "2025-09-21T09:25:25.612344Z",
+     "start_time": "2025-09-21T09:25:25.606199Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "missing = data_6.isna().sum()\n",
+    "missing = data_6.isna().sum() # tikriname, kiek ya praleistu reiksmiu\n",
     "print(missing)\n"
    ],
    "id": "b02d107823ed81ae",
@@ -89,30 +89,32 @@
      ]
     }
    ],
-   "execution_count": 86
+   "execution_count": 17
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-20T15:02:54.061495Z",
-     "start_time": "2025-09-20T15:02:54.057288Z"
+     "end_time": "2025-09-21T09:25:27.005749Z",
+     "start_time": "2025-09-21T09:25:27.001437Z"
     }
    },
    "cell_type": "code",
-   "source": "data = data_6[data_6[\"RR_r_0/RR_r_1\"].notna()]\n",
+   "source": "data = data_6[data_6[\"RR_r_0/RR_r_1\"].notna()] #saliname irasus su praleistomis reiksmemis\n",
    "id": "62ce749366818bf3",
    "outputs": [],
-   "execution_count": 87
+   "execution_count": 18
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-20T15:02:55.937105Z",
-     "start_time": "2025-09-20T15:02:55.931119Z"
+     "end_time": "2025-09-21T09:25:27.891339Z",
+     "start_time": "2025-09-21T09:25:27.885394Z"
     }
    },
    "cell_type": "code",
    "source": [
+    "# isskirstome duomenis i tris skirtingas aibes pagal klases\n",
+    "\n",
     "label_0 = data.loc[data[\"label\"] == 0]\n",
     "label_1 = data.loc[data[\"label\"] == 1]\n",
     "label_2 = data.loc[data[\"label\"] == 2]\n",
@@ -128,39 +130,39 @@
      ]
     }
    ],
-   "execution_count": 88
+   "execution_count": 19
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-20T15:03:49.443084Z",
-     "start_time": "2025-09-20T15:03:49.418250Z"
+     "end_time": "2025-09-21T09:59:03.963779Z",
+     "start_time": "2025-09-21T09:59:03.937854Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "def extreme_outliers(data, column):\n",
-    "    series = pd.to_numeric(data[column]).astype(float)\n",
+    "def outliers_function(data, column, factor): #funkcija isskirtims nustatyti\n",
+    "    col = pd.to_numeric(data[column]).astype(float)\n",
     "\n",
-    "    Q1 = series.quantile(0.25)\n",
-    "    Q3 = series.quantile(0.75)\n",
+    "    Q1 = col.quantile(0.25)\n",
+    "    Q3 = col.quantile(0.75)\n",
     "    IQR = Q3 - Q1\n",
     "\n",
-    "    lower_extreme = Q1 - 3 * IQR\n",
-    "    upper_extreme = Q3 + 3 * IQR\n",
+    "    lower = Q1 - factor * IQR\n",
+    "    upper = Q3 + factor * IQR\n",
     "\n",
-    "    out = series[(series < lower_extreme) | (series > upper_extreme)]\n",
+    "    out = col[(col < lower) | (col > upper)]\n",
     "    return out\n",
     "\n",
     "dataframes = [label_0, label_1, label_2]\n",
     "\n",
-    "columns  = [\"signal_std\", \"wl_side\", \"R_val\", \"RR_r_0/RR_r_1\", \"P_val\", \"Q_val\"]\n",
+    "columns  = [\"signal_std\", \"wl_side\", \"R_val\", \"RR_r_0/RR_r_1\", \"P_val\", \"Q_val\"] #tam, kad tiriant pozymisu nebutu label\n",
     "\n",
-    "for i, data_to_inspect in enumerate(dataframes, start=0):\n",
+    "for i, data_to_inspect in enumerate(dataframes, start=0): #sukame cikla visu klasiu pozymiu isskirtims nustatyti\n",
     "    print(f\"Inspecting label_{i}\")\n",
     "    print(\"---------------------------------\")\n",
     "    for col in columns:\n",
-    "        outlier = extreme_outliers(data_to_inspect, col)\n",
+    "        outlier = outliers_function(data_to_inspect, col, 3)\n",
     "        extreme_sum = len(outlier)\n",
     "        print(f\"{col} extreme_outliers: {extreme_sum}\")\n",
     "    print(\"*********************************\")\n"
@@ -201,13 +203,13 @@
      ]
     }
    ],
-   "execution_count": 90
+   "execution_count": 27
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-20T15:16:16.832315Z",
-     "start_time": "2025-09-20T15:16:16.797362Z"
+     "end_time": "2025-09-21T09:59:51.746368Z",
+     "start_time": "2025-09-21T09:59:51.715106Z"
     }
    },
    "cell_type": "code",
@@ -216,14 +218,14 @@
     "    data = data.copy()\n",
     "    data['is_outlier'] = False\n",
     "    for col in columns:\n",
-    "        series = pd.to_numeric(data[col])\n",
-    "        Q1 = series.quantile(0.25)\n",
-    "        Q3 = series.quantile(0.75)\n",
+    "        column = pd.to_numeric(data[col])\n",
+    "        Q1 = column.quantile(0.25)\n",
+    "        Q3 = column.quantile(0.75)\n",
     "        IQR = Q3 - Q1\n",
     "        lower_bound = Q1 - 3 * IQR\n",
     "        upper_bound = Q3 + 3 * IQR\n",
     "\n",
-    "        mask = (series < lower_bound) | (series > upper_bound)\n",
+    "        mask = (column < lower_bound) | (column > upper_bound)\n",
     "        data.loc[mask, 'is_outlier'] = True\n",
     "    return data\n",
     "\n",
@@ -243,13 +245,13 @@
    ],
    "id": "38a3acfbd662c9d4",
    "outputs": [],
-   "execution_count": 100
+   "execution_count": 28
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-20T15:16:18.472611Z",
-     "start_time": "2025-09-20T15:16:18.448074Z"
+     "end_time": "2025-09-21T10:00:12.698270Z",
+     "start_time": "2025-09-21T10:00:12.672473Z"
     }
    },
    "cell_type": "code",
@@ -259,7 +261,7 @@
     "    print(\"count: \", len(data))\n",
     "    print()\n",
     "    for col in columns:\n",
-    "        outlier = extreme_outliers(data, col)\n",
+    "        outlier = outliers_function(data, col, 3)\n",
     "        extreme_sum = len(outlier)\n",
     "        print(f\"{col} extreme outliers: {extreme_sum}\")\n",
     "    print(\"**********************************\")"
@@ -303,17 +305,22 @@
      ]
     }
    ],
-   "execution_count": 101
+   "execution_count": 30
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-20T15:17:11.032453Z",
-     "start_time": "2025-09-20T15:17:11.010044Z"
+     "end_time": "2025-09-21T09:25:40.115379Z",
+     "start_time": "2025-09-21T09:25:40.090920Z"
     }
    },
    "cell_type": "code",
    "source": [
+    "clean_label_0_data = clean_label_0_data.drop(columns=[\"is_outlier\"])\n",
+    "clean_label_1_data = clean_label_1_data.drop(columns=[\"is_outlier\"])\n",
+    "clean_label_2_data = clean_label_2_data.drop(columns=[\"is_outlier\"])\n",
+    "data = data.drop(columns=[\"is_outlier\"])\n",
+    "\n",
     "clean_label_0_data.to_csv(\"csv/labels/label_0.csv\", index=False)\n",
     "clean_label_1_data.to_csv(\"csv/labels/label_1.csv\", index=False)\n",
     "clean_label_2_data.to_csv(\"csv/labels/label_2.csv\", index=False)\n",
@@ -321,7 +328,7 @@
    ],
    "id": "492563c4f5698e2a",
    "outputs": [],
-   "execution_count": 102
+   "execution_count": 23
   },
   {
    "metadata": {
