--- a/PraleistosReiksmes_Isskirtys.ipynb
+++ b/PraleistosReiksmes_Isskirtys.ipynb
@@ -46,6 +46,19 @@
   {
    "metadata": {
     "ExecuteTime": {
+     "end_time": "2025-09-21T11:48:06.942557Z",
+     "start_time": "2025-09-21T11:48:06.896010Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "data_seed.to_csv(\"csv/raw_data_1500.csv\", index=False)",
+   "id": "751dc02e1b866838",
+   "outputs": [],
+   "execution_count": 25
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
      "end_time": "2025-09-21T11:42:18.410177Z",
      "start_time": "2025-09-21T11:42:18.406366Z"
     }
@@ -59,6 +72,19 @@
    "id": "c04c72a888ce50e0",
    "outputs": [],
    "execution_count": 16
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-09-21T11:48:43.517994Z",
+     "start_time": "2025-09-21T11:48:43.502304Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "data_6.to_csv(\"csv/raw_data_1500_6.csv\", index=False)",
+   "id": "d579f3005b21e2e",
+   "outputs": [],
+   "execution_count": 26
   },
   {
    "metadata": {
@@ -321,9 +347,9 @@
     "clean_label_2_data = clean_label_2_data.drop(columns=[\"is_outlier\"])\n",
     "data = pd.concat([clean_label_0_data, clean_label_1_data, clean_label_2_data], ignore_index=True)\n",
     "\n",
-    "clean_label_0_data.to_csv(\"csv/labels/label_0.csv\", index=False)\n",
-    "clean_label_1_data.to_csv(\"csv/labels/label_1.csv\", index=False)\n",
-    "clean_label_2_data.to_csv(\"csv/labels/label_2.csv\", index=False)\n",
+    "clean_label_0_data.to_csv(\"csv/clean_data_by_label/label_0.csv\", index=False)\n",
+    "clean_label_1_data.to_csv(\"csv/clean_data_by_label/label_1.csv\", index=False)\n",
+    "clean_label_2_data.to_csv(\"csv/clean_data_by_label/label_2.csv\", index=False)\n",
     "data.to_csv(\"csv/clean_data.csv\", index=False)\n"
    ],
    "id": "492563c4f5698e2a",
