Pataisytas clen_data failas (#9)
* Pataisytas clen_data failas

* Sutvrakyti failai

* Sutvrakyti failai

--- a/PraleistosReiksmes_Isskirtys.ipynb
+++ b/PraleistosReiksmes_Isskirtys.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-09-21T09:25:21.353349Z",
-     "start_time": "2025-09-21T09:25:21.294283Z"
+     "end_time": "2025-09-21T11:42:16.583558Z",
+     "start_time": "2025-09-21T11:42:16.523703Z"
     }
    },
    "source": [
@@ -24,8 +24,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-21T09:25:22.235816Z",
-     "start_time": "2025-09-21T09:25:22.224779Z"
+     "end_time": "2025-09-21T11:42:17.500086Z",
+     "start_time": "2025-09-21T11:42:17.488320Z"
     }
    },
    "cell_type": "code",
@@ -46,8 +46,21 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-21T09:25:23.890713Z",
-     "start_time": "2025-09-21T09:25:23.885395Z"
+     "end_time": "2025-09-21T11:48:06.942557Z",
+     "start_time": "2025-09-21T11:48:06.896010Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "data_seed.to_csv(\"csv/raw_data_1500.csv\", index=False)",
+   "id": "751dc02e1b866838",
+   "outputs": [],
+   "execution_count": 25
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-09-21T11:42:18.410177Z",
+     "start_time": "2025-09-21T11:42:18.406366Z"
     }
    },
    "cell_type": "code",
@@ -63,8 +76,21 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-21T09:25:25.612344Z",
-     "start_time": "2025-09-21T09:25:25.606199Z"
+     "end_time": "2025-09-21T11:48:43.517994Z",
+     "start_time": "2025-09-21T11:48:43.502304Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "data_6.to_csv(\"csv/raw_data_1500_6.csv\", index=False)",
+   "id": "d579f3005b21e2e",
+   "outputs": [],
+   "execution_count": 26
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-09-21T11:42:19.930126Z",
+     "start_time": "2025-09-21T11:42:19.924877Z"
     }
    },
    "cell_type": "code",
@@ -94,8 +120,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-21T09:25:27.005749Z",
-     "start_time": "2025-09-21T09:25:27.001437Z"
+     "end_time": "2025-09-21T11:42:21.541547Z",
+     "start_time": "2025-09-21T11:42:21.379946Z"
     }
    },
    "cell_type": "code",
@@ -107,8 +133,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-21T09:25:27.891339Z",
-     "start_time": "2025-09-21T09:25:27.885394Z"
+     "end_time": "2025-09-21T11:42:22.126376Z",
+     "start_time": "2025-09-21T11:42:22.120467Z"
     }
    },
    "cell_type": "code",
@@ -135,8 +161,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-21T09:59:03.963779Z",
-     "start_time": "2025-09-21T09:59:03.937854Z"
+     "end_time": "2025-09-21T11:42:23.294485Z",
+     "start_time": "2025-09-21T11:42:23.265978Z"
     }
    },
    "cell_type": "code",
@@ -203,13 +229,13 @@
      ]
     }
    ],
-   "execution_count": 27
+   "execution_count": 20
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-21T09:59:51.746368Z",
-     "start_time": "2025-09-21T09:59:51.715106Z"
+     "end_time": "2025-09-21T11:42:25.949129Z",
+     "start_time": "2025-09-21T11:42:25.921140Z"
     }
    },
    "cell_type": "code",
@@ -245,13 +271,13 @@
    ],
    "id": "38a3acfbd662c9d4",
    "outputs": [],
-   "execution_count": 28
+   "execution_count": 21
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-21T10:00:12.698270Z",
-     "start_time": "2025-09-21T10:00:12.672473Z"
+     "end_time": "2025-09-21T11:42:28.054704Z",
+     "start_time": "2025-09-21T11:42:28.028582Z"
     }
    },
    "cell_type": "code",
@@ -305,13 +331,13 @@
      ]
     }
    ],
-   "execution_count": 30
+   "execution_count": 22
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-21T09:25:40.115379Z",
-     "start_time": "2025-09-21T09:25:40.090920Z"
+     "end_time": "2025-09-21T11:42:29.962581Z",
+     "start_time": "2025-09-21T11:42:29.932928Z"
     }
    },
    "cell_type": "code",
@@ -319,11 +345,11 @@
     "clean_label_0_data = clean_label_0_data.drop(columns=[\"is_outlier\"])\n",
     "clean_label_1_data = clean_label_1_data.drop(columns=[\"is_outlier\"])\n",
     "clean_label_2_data = clean_label_2_data.drop(columns=[\"is_outlier\"])\n",
-    "data = data.drop(columns=[\"is_outlier\"])\n",
+    "data = pd.concat([clean_label_0_data, clean_label_1_data, clean_label_2_data], ignore_index=True)\n",
     "\n",
-    "clean_label_0_data.to_csv(\"csv/labels/label_0.csv\", index=False)\n",
-    "clean_label_1_data.to_csv(\"csv/labels/label_1.csv\", index=False)\n",
-    "clean_label_2_data.to_csv(\"csv/labels/label_2.csv\", index=False)\n",
+    "clean_label_0_data.to_csv(\"csv/clean_data_by_label/label_0.csv\", index=False)\n",
+    "clean_label_1_data.to_csv(\"csv/clean_data_by_label/label_1.csv\", index=False)\n",
+    "clean_label_2_data.to_csv(\"csv/clean_data_by_label/label_2.csv\", index=False)\n",
     "data.to_csv(\"csv/clean_data.csv\", index=False)\n"
    ],
    "id": "492563c4f5698e2a",
