Sutvarkytų duomenų aprašomoji statistika

--- a/PraleistosReiksmes_Isskirtys.ipynb
+++ b/PraleistosReiksmes_Isskirtys.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-09-21T11:42:16.583558Z",
-     "start_time": "2025-09-21T11:42:16.523703Z"
+     "end_time": "2025-09-21T17:15:00.629239Z",
+     "start_time": "2025-09-21T17:15:00.564451Z"
     }
    },
    "source": [
@@ -19,13 +19,13 @@
     "raw_data = pd.read_csv(\"EKG_pupsniu_analize.csv\", sep =\";\")"
    ],
    "outputs": [],
-   "execution_count": 14
+   "execution_count": 29
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-21T11:42:17.500086Z",
-     "start_time": "2025-09-21T11:42:17.488320Z"
+     "end_time": "2025-09-21T17:15:01.571681Z",
+     "start_time": "2025-09-21T17:15:01.559070Z"
     }
    },
    "cell_type": "code",
@@ -41,7 +41,7 @@
    ],
    "id": "53ed2f4b75b32c75",
    "outputs": [],
-   "execution_count": 15
+   "execution_count": 30
   },
   {
    "metadata": {
@@ -59,8 +59,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-21T11:42:18.410177Z",
-     "start_time": "2025-09-21T11:42:18.406366Z"
+     "end_time": "2025-09-21T17:15:03.521531Z",
+     "start_time": "2025-09-21T17:15:03.516774Z"
     }
    },
    "cell_type": "code",
@@ -71,7 +71,7 @@
    ],
    "id": "c04c72a888ce50e0",
    "outputs": [],
-   "execution_count": 16
+   "execution_count": 31
   },
   {
    "metadata": {
@@ -89,8 +89,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-21T11:42:19.930126Z",
-     "start_time": "2025-09-21T11:42:19.924877Z"
+     "end_time": "2025-09-21T17:15:05.857608Z",
+     "start_time": "2025-09-21T17:15:05.852215Z"
     }
    },
    "cell_type": "code",
@@ -115,26 +115,26 @@
      ]
     }
    ],
-   "execution_count": 17
+   "execution_count": 32
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-21T11:42:21.541547Z",
-     "start_time": "2025-09-21T11:42:21.379946Z"
+     "end_time": "2025-09-21T17:15:08.329593Z",
+     "start_time": "2025-09-21T17:15:08.324927Z"
     }
    },
    "cell_type": "code",
    "source": "data = data_6[data_6[\"RR_r_0/RR_r_1\"].notna()] #saliname irasus su praleistomis reiksmemis\n",
    "id": "62ce749366818bf3",
    "outputs": [],
-   "execution_count": 18
+   "execution_count": 33
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-21T11:42:22.126376Z",
-     "start_time": "2025-09-21T11:42:22.120467Z"
+     "end_time": "2025-09-21T17:15:10.010442Z",
+     "start_time": "2025-09-21T17:15:10.003468Z"
     }
    },
    "cell_type": "code",
@@ -156,13 +156,13 @@
      ]
     }
    ],
-   "execution_count": 19
+   "execution_count": 34
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-21T11:42:23.294485Z",
-     "start_time": "2025-09-21T11:42:23.265978Z"
+     "end_time": "2025-09-21T17:16:00.814340Z",
+     "start_time": "2025-09-21T17:16:00.784388Z"
     }
    },
    "cell_type": "code",
@@ -174,10 +174,19 @@
     "    Q3 = col.quantile(0.75)\n",
     "    IQR = Q3 - Q1\n",
     "\n",
-    "    lower = Q1 - factor * IQR\n",
-    "    upper = Q3 + factor * IQR\n",
+    "    lower_15 = Q1 - 1.5 * IQR\n",
+    "    upper_15 = Q3 + 1.5 * IQR\n",
+    "    lower_3 = Q1 - 3 * IQR\n",
+    "    upper_3 = Q3 + 3 * IQR\n",
     "\n",
-    "    out = col[(col < lower) | (col > upper)]\n",
+    "\n",
+    "    if factor == 3:  # ekstremalios isskirtys\n",
+    "        out = col[(col < lower_3) | (col > upper_3)]\n",
+    "\n",
+    "    elif factor == 1.5:  # salygines isskirtys\n",
+    "        out = col[((col < lower_15) & (col >= lower_3)) |\n",
+    "                  ((col > upper_15) & (col <= upper_3))]\n",
+    "\n",
     "    return out\n",
     "\n",
     "dataframes = [label_0, label_1, label_2]\n",
@@ -188,7 +197,7 @@
     "    print(f\"Inspecting label_{i}\")\n",
     "    print(\"---------------------------------\")\n",
     "    for col in columns:\n",
-    "        outlier = outliers_function(data_to_inspect, col, 3)\n",
+    "        outlier = outliers_function(data_to_inspect, col, 1.5)\n",
     "        extreme_sum = len(outlier)\n",
     "        print(f\"{col} extreme_outliers: {extreme_sum}\")\n",
     "    print(\"*********************************\")\n"
@@ -201,35 +210,35 @@
      "text": [
       "Inspecting label_0\n",
       "---------------------------------\n",
-      "signal_std extreme_outliers: 9\n",
-      "wl_side extreme_outliers: 0\n",
-      "R_val extreme_outliers: 0\n",
-      "RR_r_0/RR_r_1 extreme_outliers: 32\n",
-      "P_val extreme_outliers: 15\n",
-      "Q_val extreme_outliers: 0\n",
+      "signal_std extreme_outliers: 21\n",
+      "wl_side extreme_outliers: 18\n",
+      "R_val extreme_outliers: 1\n",
+      "RR_r_0/RR_r_1 extreme_outliers: 7\n",
+      "P_val extreme_outliers: 29\n",
+      "Q_val extreme_outliers: 3\n",
       "*********************************\n",
       "Inspecting label_1\n",
       "---------------------------------\n",
-      "signal_std extreme_outliers: 21\n",
-      "wl_side extreme_outliers: 0\n",
-      "R_val extreme_outliers: 8\n",
-      "RR_r_0/RR_r_1 extreme_outliers: 1\n",
-      "P_val extreme_outliers: 4\n",
-      "Q_val extreme_outliers: 4\n",
+      "signal_std extreme_outliers: 25\n",
+      "wl_side extreme_outliers: 36\n",
+      "R_val extreme_outliers: 30\n",
+      "RR_r_0/RR_r_1 extreme_outliers: 51\n",
+      "P_val extreme_outliers: 13\n",
+      "Q_val extreme_outliers: 22\n",
       "*********************************\n",
       "Inspecting label_2\n",
       "---------------------------------\n",
-      "signal_std extreme_outliers: 0\n",
-      "wl_side extreme_outliers: 1\n",
-      "R_val extreme_outliers: 0\n",
-      "RR_r_0/RR_r_1 extreme_outliers: 0\n",
-      "P_val extreme_outliers: 0\n",
-      "Q_val extreme_outliers: 4\n",
+      "signal_std extreme_outliers: 28\n",
+      "wl_side extreme_outliers: 2\n",
+      "R_val extreme_outliers: 9\n",
+      "RR_r_0/RR_r_1 extreme_outliers: 32\n",
+      "P_val extreme_outliers: 24\n",
+      "Q_val extreme_outliers: 66\n",
       "*********************************\n"
      ]
     }
    ],
-   "execution_count": 20
+   "execution_count": 36
   },
   {
    "metadata": {
@@ -276,8 +285,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-21T11:42:28.054704Z",
-     "start_time": "2025-09-21T11:42:28.028582Z"
+     "end_time": "2025-09-21T17:31:37.557879Z",
+     "start_time": "2025-09-21T17:31:37.532510Z"
     }
    },
    "cell_type": "code",
@@ -287,7 +296,7 @@
     "    print(\"count: \", len(data))\n",
     "    print()\n",
     "    for col in columns:\n",
-    "        outlier = outliers_function(data, col, 3)\n",
+    "        outlier = outliers_function(data, col, 1.5)\n",
     "        extreme_sum = len(outlier)\n",
     "        print(f\"{col} extreme outliers: {extreme_sum}\")\n",
     "    print(\"**********************************\")"
@@ -301,37 +310,37 @@
       "investigating label_0\n",
       "count:  453\n",
       "\n",
-      "signal_std extreme outliers: 50\n",
-      "wl_side extreme outliers: 0\n",
+      "signal_std extreme outliers: 61\n",
+      "wl_side extreme outliers: 11\n",
       "R_val extreme outliers: 0\n",
-      "RR_r_0/RR_r_1 extreme outliers: 1\n",
-      "P_val extreme outliers: 2\n",
-      "Q_val extreme outliers: 0\n",
+      "RR_r_0/RR_r_1 extreme outliers: 5\n",
+      "P_val extreme outliers: 20\n",
+      "Q_val extreme outliers: 4\n",
       "**********************************\n",
       "investigating label_1\n",
       "count:  476\n",
       "\n",
-      "signal_std extreme outliers: 4\n",
-      "wl_side extreme outliers: 24\n",
-      "R_val extreme outliers: 1\n",
-      "RR_r_0/RR_r_1 extreme outliers: 0\n",
-      "P_val extreme outliers: 1\n",
-      "Q_val extreme outliers: 0\n",
+      "signal_std extreme outliers: 22\n",
+      "wl_side extreme outliers: 69\n",
+      "R_val extreme outliers: 17\n",
+      "RR_r_0/RR_r_1 extreme outliers: 44\n",
+      "P_val extreme outliers: 10\n",
+      "Q_val extreme outliers: 21\n",
       "**********************************\n",
       "investigating label_2\n",
       "count:  495\n",
       "\n",
-      "signal_std extreme outliers: 0\n",
-      "wl_side extreme outliers: 0\n",
-      "R_val extreme outliers: 0\n",
-      "RR_r_0/RR_r_1 extreme outliers: 0\n",
-      "P_val extreme outliers: 0\n",
-      "Q_val extreme outliers: 0\n",
+      "signal_std extreme outliers: 28\n",
+      "wl_side extreme outliers: 2\n",
+      "R_val extreme outliers: 9\n",
+      "RR_r_0/RR_r_1 extreme outliers: 28\n",
+      "P_val extreme outliers: 23\n",
+      "Q_val extreme outliers: 65\n",
       "**********************************\n"
      ]
     }
    ],
-   "execution_count": 22
+   "execution_count": 38
   },
   {
    "metadata": {
@@ -347,9 +356,9 @@
     "clean_label_2_data = clean_label_2_data.drop(columns=[\"is_outlier\"])\n",
     "data = pd.concat([clean_label_0_data, clean_label_1_data, clean_label_2_data], ignore_index=True)\n",
     "\n",
-    "clean_label_0_data.to_csv(\"csv/clean_data_by_label/label_0.csv\", index=False)\n",
-    "clean_label_1_data.to_csv(\"csv/clean_data_by_label/label_1.csv\", index=False)\n",
-    "clean_label_2_data.to_csv(\"csv/clean_data_by_label/label_2.csv\", index=False)\n",
+    "clean_label_0_data.to_csv(\"csv/clean_data_by_label/sutvarkytu_duomenu_aprasomoji_statistika_label_0.csv\", index=False)\n",
+    "clean_label_1_data.to_csv(\"csv/clean_data_by_label/sutvarkytu_duomenu_aprasomoji_statistika_label_1.csv\", index=False)\n",
+    "clean_label_2_data.to_csv(\"csv/clean_data_by_label/sutvarkytu_duomenu_aprasomoji_statistika_label_2.csv\", index=False)\n",
     "data.to_csv(\"csv/clean_data.csv\", index=False)\n"
    ],
    "id": "492563c4f5698e2a",
