Aprašomoji statistika nr 2 (#15)
* Sutvarkytų duomenų aprašomoji statistika

* Aprašomoji statistika nr 2

* Aprašomosios statistikos label_0 lentelės pataisymas, pridėtas kodas palyginimų grafikams braižyti, jei reiks

---------

Co-authored-by: nešiojamas <Admin@DESKTOP-0LCIBFD>

--- a/AprasomojiStatistikaNr2.ipynb
+++ b/AprasomojiStatistikaNr2.ipynb
@@ -1,15 +1,13 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "id": "initial_id",
    "metadata": {
-    "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-09-21T18:12:00.436665Z",
-     "start_time": "2025-09-21T18:12:00.425734Z"
+     "end_time": "2025-09-22T14:58:33.518354Z",
+     "start_time": "2025-09-22T14:58:33.508065Z"
     }
    },
+   "cell_type": "code",
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -18,22 +16,23 @@
     "label_1 = pd.read_csv(\"csv/clean_data_by_label/label_1.csv\")\n",
     "label_2 = pd.read_csv(\"csv/clean_data_by_label/label_2.csv\")"
    ],
+   "id": "d4b084f36916abe1",
    "outputs": [],
-   "execution_count": 2
+   "execution_count": 12
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-21T18:16:02.276662Z",
-     "start_time": "2025-09-21T18:16:02.262816Z"
+     "end_time": "2025-09-22T14:58:36.700580Z",
+     "start_time": "2025-09-22T14:58:36.689251Z"
     }
    },
    "cell_type": "code",
    "source": [
     "stats_list = []\n",
     "\n",
-    "for col in label_2.columns:\n",
-    "    x = label_2[col]\n",
+    "for col in label_0.columns:\n",
+    "    x = label_0[col]\n",
     "    stats = {\n",
     "        \"Variable\": col,\n",
     "        \"Minimumas\": np.nanmin(x),\n",
@@ -49,33 +48,31 @@
     "\n",
     "stats_df = pd.DataFrame(stats_list)\n",
     "\n",
-    "stats_df = stats_df.round(4)\n",
-    "\n",
-    "\n",
-    "stats_df.to_csv(\"sutvarkytu_duomenu_aprasomoji_statistika/sutvarkytu_duomenu_aprasomoji_statistika_label_2.csv\", index=False)"
+    "stats_df = stats_df.round(4)"
    ],
-   "id": "d766be624f6ab951",
+   "id": "732e143e0add9443",
    "outputs": [],
-   "execution_count": 7
+   "execution_count": 13
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-09-22T14:58:40.067532Z",
+     "start_time": "2025-09-22T14:58:40.062954Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "stats_df.to_csv(\"sutvarkytu_duomenu_aprasomoji_statistika/sutvarkytu_duomenu_aprasomoji_statistika_label_0.csv\", index = False)",
+   "id": "290aad31f36ef538",
+   "outputs": [],
+   "execution_count": 14
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "name": "python3",
    "language": "python",
-   "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 2
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "display_name": "Python 3 (ipykernel)"
   }
  },
  "nbformat": 4,
