Pridėtas koreliacijos skaičiavimo kodas ir pataisyti label failai, kad butu be stulpelio "label"

--- a/AS_palyginimas.ipynb
+++ b/AS_palyginimas.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-09-22T15:39:37.493598Z",
-     "start_time": "2025-09-22T15:39:37.482966Z"
+     "end_time": "2025-09-22T16:37:39.870167Z",
+     "start_time": "2025-09-22T16:37:39.850409Z"
     }
    },
    "source": [
@@ -24,35 +24,158 @@
     "data_first_1.drop(columns=columns_to_drop, inplace=True)\n",
     "data_first_2.drop(columns=columns_to_drop, inplace=True)\n",
     "\n",
-    "data_first_0 = data_first_0[data_first_0[\"Variable\"] != \"wl_side\"]\n",
-    "data_first_1 = data_first_1[data_first_1[\"Variable\"] != \"wl_side\"]\n",
-    "data_first_2 = data_first_2[data_first_2[\"Variable\"] != \"wl_side\"]\n",
-    "\n"
+    "# data_first_0 = data_first_0[data_first_0[\"Variable\"] != \"wl_side\"]\n",
+    "# data_first_1 = data_first_1[data_first_1[\"Variable\"] != \"wl_side\"]\n",
+    "# data_first_2 = data_first_2[data_first_2[\"Variable\"] != \"wl_side\"]\n"
    ],
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Liveta\\AppData\\Local\\Temp\\ipykernel_16572\\683714683.py:10: SettingWithCopyWarning: \n",
+      "C:\\Users\\Liveta\\AppData\\Local\\Temp\\ipykernel_12676\\2697236123.py:10: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  data_first_0.drop(columns=columns_to_drop, inplace=True)\n",
-      "C:\\Users\\Liveta\\AppData\\Local\\Temp\\ipykernel_16572\\683714683.py:11: SettingWithCopyWarning: \n",
+      "C:\\Users\\Liveta\\AppData\\Local\\Temp\\ipykernel_12676\\2697236123.py:11: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  data_first_1.drop(columns=columns_to_drop, inplace=True)\n",
-      "C:\\Users\\Liveta\\AppData\\Local\\Temp\\ipykernel_16572\\683714683.py:12: SettingWithCopyWarning: \n",
+      "C:\\Users\\Liveta\\AppData\\Local\\Temp\\ipykernel_12676\\2697236123.py:12: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  data_first_2.drop(columns=columns_to_drop, inplace=True)\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "        Variable  Minimumas   Q1.25.   Mediana  Vidurkis    Q3.75.  \\\n",
+       "0     signal_std     0.1368   0.2404    0.2670    0.3047    0.3595   \n",
+       "1        wl_side    73.0000  99.0000  112.0000  110.4960  121.0000   \n",
+       "2          R_val     0.6784   1.1894    1.6051    1.5711    1.8650   \n",
+       "3  RR_r_0/RR_r_1     0.2873   0.9722    1.0000    0.9927    1.0250   \n",
+       "4          P_val    -0.6616  -0.2563   -0.1778   -0.0969   -0.0623   \n",
+       "5          Q_val    -0.9827  -0.5364   -0.4612   -0.4284   -0.3003   \n",
+       "\n",
+       "   Maksimumas  Dispersija  \n",
+       "0      0.8259      0.0171  \n",
+       "1    172.0000    351.4248  \n",
+       "2      2.9692      0.2078  \n",
+       "3      2.1515      0.0295  \n",
+       "4      2.2769      0.1241  \n",
+       "5      0.0909      0.0264  "
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Variable</th>\n",
+       "      <th>Minimumas</th>\n",
+       "      <th>Q1.25.</th>\n",
+       "      <th>Mediana</th>\n",
+       "      <th>Vidurkis</th>\n",
+       "      <th>Q3.75.</th>\n",
+       "      <th>Maksimumas</th>\n",
+       "      <th>Dispersija</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>signal_std</td>\n",
+       "      <td>0.1368</td>\n",
+       "      <td>0.2404</td>\n",
+       "      <td>0.2670</td>\n",
+       "      <td>0.3047</td>\n",
+       "      <td>0.3595</td>\n",
+       "      <td>0.8259</td>\n",
+       "      <td>0.0171</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>wl_side</td>\n",
+       "      <td>73.0000</td>\n",
+       "      <td>99.0000</td>\n",
+       "      <td>112.0000</td>\n",
+       "      <td>110.4960</td>\n",
+       "      <td>121.0000</td>\n",
+       "      <td>172.0000</td>\n",
+       "      <td>351.4248</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>R_val</td>\n",
+       "      <td>0.6784</td>\n",
+       "      <td>1.1894</td>\n",
+       "      <td>1.6051</td>\n",
+       "      <td>1.5711</td>\n",
+       "      <td>1.8650</td>\n",
+       "      <td>2.9692</td>\n",
+       "      <td>0.2078</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>RR_r_0/RR_r_1</td>\n",
+       "      <td>0.2873</td>\n",
+       "      <td>0.9722</td>\n",
+       "      <td>1.0000</td>\n",
+       "      <td>0.9927</td>\n",
+       "      <td>1.0250</td>\n",
+       "      <td>2.1515</td>\n",
+       "      <td>0.0295</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>P_val</td>\n",
+       "      <td>-0.6616</td>\n",
+       "      <td>-0.2563</td>\n",
+       "      <td>-0.1778</td>\n",
+       "      <td>-0.0969</td>\n",
+       "      <td>-0.0623</td>\n",
+       "      <td>2.2769</td>\n",
+       "      <td>0.1241</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Q_val</td>\n",
+       "      <td>-0.9827</td>\n",
+       "      <td>-0.5364</td>\n",
+       "      <td>-0.4612</td>\n",
+       "      <td>-0.4284</td>\n",
+       "      <td>-0.3003</td>\n",
+       "      <td>0.0909</td>\n",
+       "      <td>0.0264</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
-   "execution_count": 22
+   "execution_count": 2
   },
   {
    "metadata": {
