Sugeneruoti failai sklaidos diagramoms

--- a/KoreliacijuSkaiciavimas.ipynb
+++ b/KoreliacijuSkaiciavimas.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-09-22T16:52:33.882209Z",
-     "start_time": "2025-09-22T16:52:33.868561Z"
+     "end_time": "2025-09-22T20:12:51.693541Z",
+     "start_time": "2025-09-22T20:12:51.683428Z"
     }
    },
    "source": [
@@ -19,170 +19,14 @@
     "label_1 = pd.read_csv(\"csv/clean_data_by_label/label_1.csv\")\n",
     "label_2 = pd.read_csv(\"csv/clean_data_by_label/label_2.csv\")"
    ],
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "     signal_std  wl_side     R_val  RR_r_0/RR_r_1     P_val     Q_val\n",
-       "0      0.261788    116.0  1.809675       0.960000 -0.182510 -0.451971\n",
-       "1      0.269011    102.0  1.174185       1.069444 -0.169423 -0.366943\n",
-       "2      0.147860    109.0  0.937644       0.956790 -0.189637 -0.532611\n",
-       "3      0.674325    154.0  2.645464       0.857143 -0.491257 -0.506129\n",
-       "4      0.237286    105.0  1.161082       1.049645 -0.060430 -0.333899\n",
-       "..          ...      ...       ...            ...       ...       ...\n",
-       "448    0.411675    112.0  2.139756       0.968153 -0.171620 -0.256645\n",
-       "449    0.529229     77.0  2.540228       1.028037  0.084008 -0.253305\n",
-       "450    0.266297    118.0  1.807730       0.967568 -0.270505 -0.501780\n",
-       "451    0.235736    103.0  1.224137       1.013793 -0.079166 -0.310593\n",
-       "452    0.257028    120.0  1.686194       1.036585 -0.239823 -0.522134\n",
-       "\n",
-       "[453 rows x 6 columns]"
-      ],
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>signal_std</th>\n",
-       "      <th>wl_side</th>\n",
-       "      <th>R_val</th>\n",
-       "      <th>RR_r_0/RR_r_1</th>\n",
-       "      <th>P_val</th>\n",
-       "      <th>Q_val</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0.261788</td>\n",
-       "      <td>116.0</td>\n",
-       "      <td>1.809675</td>\n",
-       "      <td>0.960000</td>\n",
-       "      <td>-0.182510</td>\n",
-       "      <td>-0.451971</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>0.269011</td>\n",
-       "      <td>102.0</td>\n",
-       "      <td>1.174185</td>\n",
-       "      <td>1.069444</td>\n",
-       "      <td>-0.169423</td>\n",
-       "      <td>-0.366943</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>0.147860</td>\n",
-       "      <td>109.0</td>\n",
-       "      <td>0.937644</td>\n",
-       "      <td>0.956790</td>\n",
-       "      <td>-0.189637</td>\n",
-       "      <td>-0.532611</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0.674325</td>\n",
-       "      <td>154.0</td>\n",
-       "      <td>2.645464</td>\n",
-       "      <td>0.857143</td>\n",
-       "      <td>-0.491257</td>\n",
-       "      <td>-0.506129</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>0.237286</td>\n",
-       "      <td>105.0</td>\n",
-       "      <td>1.161082</td>\n",
-       "      <td>1.049645</td>\n",
-       "      <td>-0.060430</td>\n",
-       "      <td>-0.333899</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>448</th>\n",
-       "      <td>0.411675</td>\n",
-       "      <td>112.0</td>\n",
-       "      <td>2.139756</td>\n",
-       "      <td>0.968153</td>\n",
-       "      <td>-0.171620</td>\n",
-       "      <td>-0.256645</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>449</th>\n",
-       "      <td>0.529229</td>\n",
-       "      <td>77.0</td>\n",
-       "      <td>2.540228</td>\n",
-       "      <td>1.028037</td>\n",
-       "      <td>0.084008</td>\n",
-       "      <td>-0.253305</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>450</th>\n",
-       "      <td>0.266297</td>\n",
-       "      <td>118.0</td>\n",
-       "      <td>1.807730</td>\n",
-       "      <td>0.967568</td>\n",
-       "      <td>-0.270505</td>\n",
-       "      <td>-0.501780</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>451</th>\n",
-       "      <td>0.235736</td>\n",
-       "      <td>103.0</td>\n",
-       "      <td>1.224137</td>\n",
-       "      <td>1.013793</td>\n",
-       "      <td>-0.079166</td>\n",
-       "      <td>-0.310593</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>452</th>\n",
-       "      <td>0.257028</td>\n",
-       "      <td>120.0</td>\n",
-       "      <td>1.686194</td>\n",
-       "      <td>1.036585</td>\n",
-       "      <td>-0.239823</td>\n",
-       "      <td>-0.522134</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>453 rows × 6 columns</p>\n",
-       "</div>"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "execution_count": 23
+   "outputs": [],
+   "execution_count": 30
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-22T16:46:09.010946Z",
-     "start_time": "2025-09-22T16:46:08.999329Z"
+     "end_time": "2025-09-22T19:40:48.372501Z",
+     "start_time": "2025-09-22T19:40:48.360071Z"
     }
    },
    "cell_type": "code",
@@ -191,16 +35,39 @@
     "df = label_2.copy()\n",
     "for col1, col2 in itertools.combinations(df.columns, 2):\n",
     "    corr_coef, p_value = pearsonr(df[col1], df[col2])\n",
-    "    results.append({'Var1': col1, 'Var2': col2, 'Correlation': corr_coef, 'p-value': p_value})\n",
+    "    results.append({'Požymis 1': col1, 'Požymis 2': col2, 'Koreliacija': corr_coef, 'p reikšmė': p_value})\n",
     "\n",
     "results_df = pd.DataFrame(results)\n",
-    "results_df['p-value'] = results_df['p-value'].round(5)\n",
+    "results_df['p reikšmė'] = results_df['p reikšmė'].round(4)\n",
+    "results_df['Koreliacija'] = results_df['Koreliacija'].round(4)\n",
+    "\n",
     "\n",
     "results_df.to_csv(\"koreliacija/label_2.csv\", index=False)"
    ],
    "id": "c327c83afb0f1011",
    "outputs": [],
-   "execution_count": 20
+   "execution_count": 27
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-09-22T20:16:04.655938Z",
+     "start_time": "2025-09-22T20:16:04.642327Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "label_0_signal_std_r_val = label_0[[\"signal_std\", \"R_val\"]]\n",
+    "label_1_signal_std_r_val = label_1[[\"signal_std\", \"R_val\"]]\n",
+    "label_2_signal_std_r_val = label_2[[\"signal_std\", \"R_val\"]]\n",
+    "\n",
+    "label_0_signal_std_r_val.to_csv(\"sklaidos_diagramos/label_0_signal_std_r_val.csv\", index=False)\n",
+    "label_1_signal_std_r_val.to_csv(\"sklaidos_diagramos/label_1_signal_std_r_val.csv\", index=False)\n",
+    "label_2_signal_std_r_val.to_csv(\"sklaidos_diagramos/label_2_signal_std_r_val.csv\", index=False)"
+   ],
+   "id": "2e8885d96ff4f086",
+   "outputs": [],
+   "execution_count": 33
   }
  ],
  "metadata": {
